Most functionalities added Calculator class with all operation methods Fixed wrapping issue Sign button not working

--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@ body {
 
 .title {
     text-align: center;
-    font-size: 28px;
+    font-size: 36px;
 }
+
 .main{
-    display: flex;
-    flex-direction: column;
+    display: grid;
     justify-content: center;
-    align-items: center;
+    align-content: center;
 }
 
 .buttons {
@@ -37,7 +37,12 @@ body {
     background-color: rgba(255, 255, 255, 0.5);
 }
 
-button:hover {
+.buttons .operation {
+    background-color:rgba(232, 171, 45, 0.93);
+}
+
+button:hover,
+button.operation:hover {
     background-color: rgba(255, 255, 255, 0.9);
 }
 
@@ -47,5 +52,23 @@ button:hover {
 
 .output {
     grid-column: 1 / -1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+    padding: 10px;
     background-color: rgba(0, 0, 0, 0.1);
+    word-wrap: break-word;
+    word-break: break-all;
+    min-height: 8vh;
+}
+
+.previous-operand {
+    font-size: 2rem;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.current-operand {
+    font-size: 3rem;
+    color: white;
 }
